--- a/api/package.json
+++ b/api/package.json
@@ -11,16 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.1.3"
+    "@types/node": "^20.1.3",
+    "morgan": "^1.10.0"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/morgan": "^1.9.4",
     "@types/sequelize": "^4.28.15",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
     "sequelize": "^6.32.1"
   }
 }
