--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "App Videogames",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Santiago L. Romero",
@@ -21,7 +22,9 @@
     "@types/sequelize": "^4.28.15",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pg": "^8.11.1",
     "sequelize": "^6.32.1"
   }
 }
