--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc"
+    "tsc": "tsc"
   },
   "keywords": [],
   "author": "Santiago L. Romero",
