--- a/api/package.json
+++ b/api/package.json
@@ -15,11 +15,13 @@
     "morgan": "^1.10.0"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/morgan": "^1.9.4",
     "@types/sequelize": "^4.28.15",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
