--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5"
   }
 }
