--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.3",
+    "@types/uuid": "^9.0.2",
     "morgan": "^1.10.0"
   },
   "dependencies": {
@@ -29,6 +30,7 @@
     "express": "^4.18.2",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "uuid": "^9.0.0"
   }
 }
